--- a/package.json
+++ b/package.json
@@ -5,19 +5,18 @@
   "main": "dist/npm/index.js",
   "scripts": {
     "dev": "./scripts/dev",
-    "dev:docs": "./scripts/dev-docs",
     "serve": "./scripts/serve",
     "doctoc": "doctoc --maxlevel 3 README.md CONTRIBUTING.md",
     "build": "./scripts/build",
     "build:css": "./scripts/build-css",
     "build:js": "./scripts/build-js",
-    "build:docs": "./scripts/build-docs",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
-    "lint": "eslint .",
+    "lint": "./scripts/lint",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest --coverage && npm run lint",
-    "test:watch": "jest --watch"
+    "test": "./scripts/test",
+    "test:watch": "jest --watch",
+    "docs:build": "NODE_ENV=production babel-node ./scripts/docs/build.js"
   },
   "files": [
     "dist/"
@@ -37,10 +36,51 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "9.1.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/node": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@fullhuman/postcss-purgecss": "^1.0.1",
+    "autoprefixer": "^8.6.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.3",
+    "chalk": "^2.4.1",
+    "chokidar": "^2.0.4",
+    "cpx": "^1.5.0",
+    "eslint": "4.19.1",
+    "eslint-config-algolia": "^13.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "21.15.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "front-matter": "^2.3.0",
+    "fs-extra": "^7.0.0",
+    "glob": "^7.1.2",
+    "husky": "^0.14.3",
+    "jest": "^23.4.2",
+    "live-server": "^1.2.0",
+    "lodash": "^4.17.10",
+    "markdown-it": "^8.4.1",
+    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-highlightjs": "^3.0.0",
+    "p-all": "^1.0.0",
+    "p-each-series": "^1.0.0",
+    "p-map": "^1.2.0",
+    "pify": "^3.0.0",
+    "postcss": "^6.0.23",
+    "postcss-clean": "^1.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-nested": "^3.0.0",
+    "prettier": "1.9.2",
+    "pug": "^2.0.3",
+    "sinon": "^6.1.4",
+    "stylelint": "^9.3.0",
+    "stylelint-csstree-validator": "^1.3.0",
+    "tailwindcss": "^0.6.1"
+  },
+  "oldDependencies": {
+    "babel-eslint": "8.2.3",
     "babel-istanbul": "0.12.2",
     "babel-jest": "23.4.2",
     "babel-loader": "7.1.5",
