--- a/docs/package.json
+++ b/docs/package.json
@@ -56,6 +56,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@glidejs/glide": "^3.2.3"
+    "@glidejs/glide": "^3.2.3",
+    "popper.js": "^1.14.4"
   }
 }
