--- a/docs/config.json
+++ b/docs/config.json
@@ -5,7 +5,9 @@
     "url": "https://community.algolia.com/docsearch",
     "repo": "https://github.com/algolia/docsearch"
   },
-  "placeholders": {},
+  "placeholders": {
+    "docSearchJSVersion": "2"
+  },
   "sidebar": [
     {
       "title": "Essentials",
@@ -52,8 +54,8 @@
           "url": "styling.html"
         },
         {
-          "title": "Events",
-          "url": "events.html"
+          "title": "Behavior",
+          "url": "behavior.html"
         }
       ]
     },
