--- a/docs/config.json
+++ b/docs/config.json
@@ -1,6 +1,7 @@
 {
   "site": {
-    "title": "DocSearch",
+    "project": "DocSearch",
+    "title": "Algolia DocSearch: Search made for documentation",
     "description": "The easiest way to add search to your documentation",
     "url": "https://community.algolia.com/docsearch",
     "repo": "https://github.com/algolia/docsearch"
